unassigned can not comment

--- a/src/app/components/project-managment/project-detail/project-detail.component.html
+++ b/src/app/components/project-managment/project-detail/project-detail.component.html
@@ -21,7 +21,7 @@
           </mat-card-content>
             <mat-card-actions>
               <div> 
-              <button mat-button color="accent" (click)="goToProjectView()">Manage tickets</button>
+              <button mat-button color="accent" (click)="goToProjectView()">Project tickets</button>
               </div>
             </mat-card-actions>
           </mat-card>
