added custom icon

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="flex justify-center items-center flex-col h-[90vh]">
     
-       <span class="mb-10 flex items-center gap-4  text-4xl">MKbug tracker <mat-icon class="text-[#ff4081]" >pest_control</mat-icon> </span>
+       <span class="mb-10 flex items-center gap-4  text-4xl">MKbug tracker <img src="../../../bugTracker.ico" width="32" height="32" alt=""></span>
     
     <div class=" shadow-lg rounded bg-white p-4 min-w-[40%]">
         <form class="flex flex-col" *ngIf="!isResetingPassword">
