--- a/src/app/components/project-managment/project-detail/project-detail.component.html
+++ b/src/app/components/project-managment/project-detail/project-detail.component.html
@@ -1,5 +1,8 @@
-<div class="flex flex-col gap-8 sticky top-8" *ngIf="currentProject; else hint">
+<div class="flex flex-col gap-8 sticky top-8 sm:border-none border" *ngIf="currentProject; else hint">
 
+    <span class="block sm:hidden text-2xl underline pt-4 px-4">Selected project details:</span>
+
+    
 
         <mat-card class="example-card">
             <mat-card-content>
@@ -25,9 +28,13 @@
               </div>
             </mat-card-actions>
           </mat-card>
-    
+
+      
         <mat-card class="example-card">
             <mat-card-content>
+
+              <div class="overflow-x-scroll">
+
               <table mat-table [dataSource]="dataSource" #table class="w-[100%]">
 
                 <ng-container matColumnDef="name">
@@ -58,6 +65,8 @@
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
               </table>
+                
+          </div>
             </mat-card-content>
             <mat-card-actions>
               <div > 
@@ -69,8 +78,9 @@
               </div>
             </mat-card-actions >
           </mat-card>
-  
-</div>
+        </div>
+
+
 
 <ng-template #hint>
   <p class="text-2xl mt-3 text-center">
