--- a/src/app/components/ticket-list/ticket-dialog/ticket-dialog.component.html
+++ b/src/app/components/ticket-list/ticket-dialog/ticket-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Create new Ticket</h1>
 <form class="example-form" [formGroup]="editedTicket">
-  <div mat-dialog-content class="row min-w-[25rem]">
+  <div mat-dialog-content class="row sm:w-[100%] sm:min-w-[25rem]">
     <div class="column">
       <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Ticket name</mat-label>
