--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,3 +56,7 @@ app-ticket-detail .mat-select-value{
 
     padding: 4px;
 }
+
+app-project-detail .mat-form-field-appearance-legacy .mat-form-field-wrapper{
+    padding-bottom: 11px;
+}
