--- a/src/app/components/project-managment/project-card/project-card.component.html
+++ b/src/app/components/project-managment/project-card/project-card.component.html
@@ -1,10 +1,9 @@
 <div class=" flex flex-col gap-6">
-    <mat-card class="hover:cursor-pointer" *ngFor="let project of projects" (click)="openProject.emit(project)">
+  <ng-container *ngFor="let project of projects">
+    <mat-card class="hover:cursor-pointer" [ngClass]="{'border-2':project.id ==  selectedProject.id, 'border-[#0000008a]':project.id ==  selectedProject.id}"  (click)="openProject.emit(project)">
       <mat-card-title>{{project.title}} </mat-card-title>
       <mat-card-subtitle>{{project.subtitle}}</mat-card-subtitle>
-
       <mat-card-content>
-        
         <mat-progress-bar
         color="accent"
         [value]="getCompletionProgress(project?.ticketStatus)">
@@ -19,5 +18,6 @@
       </mat-card-actions>
     
     </mat-card>
+  </ng-container>
   </div>
   
