--- a/src/app/components/ticket-detail/ticket-detail.component.html
+++ b/src/app/components/ticket-detail/ticket-detail.component.html
@@ -210,7 +210,7 @@
         </ng-template>
 
     <ng-container select="selector" *ngFor="let comment of (ticket$ | async)?.ticketComments">
-    <div class="flex my-2 border">
+    <div class="flex my-2 border flex-wrap w-[100%]">
 
         <div class="flex-1 flex flex-row items-center gap-4 p-2">
             <img [src]="getProfilePic(comment.user)" height="50" width="50" class="rounded-full border bg-[#fafafa7d]" alt="profile Pic">
@@ -220,7 +220,7 @@
             </div>
         </div>
 
-        <div class="flex-1 grow-[3] p-2 h-[100%] ">
+        <div class="flex-1 grow-[3] p-2 h-[100%] min-w-[82%] sm:min-w-[auto]">
             <div class="commentText">{{comment.comment}}</div>
         </div>
         
