--- a/src/app/components/ticket-list/ticket-list.component.html
+++ b/src/app/components/ticket-list/ticket-list.component.html
@@ -3,7 +3,7 @@
     <p style="margin: 0px" class="text-xl">Filters</p>
   </div>
   <div class="flex flex-col">
-    <div class="p-2 bg-slate-100 grid grid-cols-4 gap-4">
+    <div class="p-2 bg-slate-100 grid sm:grid-cols-4 grid-cols-2 gap-4">
 
       <mat-form-field appearance="outline" *ngIf="this.selectedProject$">
         <mat-label>Reported by</mat-label>
@@ -67,7 +67,6 @@
           <input formControlName="startDate"  matStartDate placeholder="Start date" />
           <input formControlName="endDate"  matEndDate placeholder="End date" />
         </mat-date-range-input>
-        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle
           matSuffix
           [for]="createdPicker"
@@ -153,7 +152,7 @@
     <th mat-header-cell mat-sort-header *matHeaderCellDef mat-sort-header>
       Name
     </th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    <td class="whitespace-nowrap sm:whitespace-normal  max-w-[14rem] text-ellipsis overflow-hidden" mat-cell *matCellDef="let element">{{ element.name }}</td>
   </ng-container>
 
 
